homepage plan - adjusting p spacing to get correct height of box.

--- a/total-child/style.css
+++ b/total-child/style.css
@@ -550,6 +550,7 @@ a > .ourHistoryButton {color: #ec5e54;}
 .planCallOut p {
 	line-height: 26px;
 	font-size: 16px;
+	margin: 28px 35px 0 0;
 }
 
 .planCallOut ul {
